@@ -15955,3 +15955,6 @@ qc pass: p4lang downlink
 ---------------------------------- 2024-08-24 07:41:45 24.8.24
 no qc pass: dhcp with excluded address
 failed: dhcp with excluded address
+---------------------------------- 2024-08-24 08:11:51 24.8.24
+no failed: dhcp with excluded address
+qc pass: dhcp with excluded address
